# RAG-MCP

./: .dockerignore  .gitignore  000_READ_ME_FIRST.md  00_BUILD_COMPLETE.md  BUG_FIXES_SUMMARY.md  BUILD_FIXES_SUMMARY.md  BUILD_SUMMARY.md  CHECKLIST.md  CLAUDE_DESKTOP_SETUP.md  CONFIG.md  CONTRIBUTING.md  DOCKER_BUILD_FIXES.md  DOCKER_DEPLOYMENT_COMPLETE.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SETUP.md  Dockerfile  EXAMPLES.md  GITHUB_RELEASE_READY.md  GITHUB_UPLOAD_CHECKLIST.md  INDEX.md  INSTALLATION_COMPLETE.md  LICENSE  PROJECT_READY_FOR_GITHUB.md  QUICK_START_FIXED.md  README.md  README_UV.md  READY_TO_USE.py  RELEASE_SUMMARY.md  START_HERE.md  TEST_RESULTS_REPORT.md  UV_INTEGRATION.md  UV_INTEGRATION_COMPLETE.md  UV_INTEGRATION_SUMMARY.md  UV_SETUP.md  claude_desktop_config.json  client.py  docker-compose.override.yml  docker-compose.yml  docker_ops.ps1  (+11 more)
.claude/: settings.local.json
config/: config.py
examples/: sample_specification.json  simple_requirements.txt
scripts/: setup_env.ps1  setup_env.sh  setup_with_uv.py
src/: __init__.py  comparison_engine.py  rag_server.py
test_data/: create_test_files.py  test_requirements.txt  test_spreadsheet.xlsx
